--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -4,3 +4,8 @@
     text-align: center;
     font-size: 1rem;
 }
+
+.titlebar{
+    background:
+      linear-gradient(to top, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.3) 70%, rgba(0,0,0,0) 100%)
+}
