--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -9,3 +9,18 @@
     background:
       linear-gradient(to top, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.3) 70%, rgba(0,0,0,0) 100%)
 }
+
+.container{
+    display: flex;
+}
+
+.leftPart{
+    width: 76%;
+    margin: 16px;
+}
+
+.rightPart{
+    width: 24%;
+    margin: 16px;
+}
+
