revamping the header and details page

--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -29,3 +29,14 @@ img{
   .infinite {
     animation-iteration-count: infinite;
   }
+
+  p{
+    text-align: center;
+  }
+  .dispNone {
+    display: none;
+}
+
+.dispBlock {
+    display: block;
+}
